refactor: BLUE do TDD - dominio refatorado com 100% de cobertura
premiarAlunoDoMes passou de laco imperativo para Stream.max, eliminando as
guardas redundantes e o codigo morto do GREEN. Validacoes duplicadas
unificadas em Aluno e ParticipacaoForum. Nenhum teste foi alterado.

JaCoCo: 0 instrucoes, 0 branches e 0 linhas perdidas no pacote domain.
Regra jacoco:check quebra o build se o dominio sair de 100%.

Evidencias:
- docs/evidencias/tdd/03-blue-testes-passando.txt
- docs/evidencias/tdd/03-blue-cobertura.md
- docs/evidencias/tdd/jacoco-blue/index.html (relatorio HTML)