@@ -1,49 +1,54 @@
 package com.example.grupo12_praticaatdd.domain;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 
 /**
  * Forum da plataforma. Concentra a regra de negocio da US1: ao encerrar o mes,
  * o aluno de maior engajamento ganha 1 curso.
  *
- * FASE GREEN do TDD: implementacao mais simples que faz os testes passarem.
+ * FASE BLUE do TDD: a busca do vencedor virou uma unica expressao com Stream,
+ * eliminando as guardas redundantes e o codigo morto que a etapa GREEN deixou.
  */
 public class Forum {
 
+    private static final String PARTICIPACAO_OBRIGATORIA = "Participacao e obrigatoria";
+
+    private static final Comparator<ParticipacaoForum> POR_ENGAJAMENTO =
+            Comparator.comparingInt(ParticipacaoForum::getEngajamento);
+
     private final List<ParticipacaoForum> participacoes = new ArrayList<>();
 
+    /**
+     * Registra a participacao de um aluno no forum no mes corrente.
+     */
     public void registrar(ParticipacaoForum participacao) {
         if (participacao == null) {
-            throw new IllegalArgumentException("Participacao e obrigatoria");
+            throw new IllegalArgumentException(PARTICIPACAO_OBRIGATORIA);
         }
         participacoes.add(participacao);
     }
 
+    /**
+     * Encerra o mes e premia o aluno de maior engajamento com 1 curso.
+     *
+     * @return o aluno premiado, ou {@code null} quando nao houve participacao no mes.
+     */
     public Aluno premiarAlunoDoMes() {
-        if (participacoes == null || participacoes.isEmpty()) {
-            return null;
-        }
-
-        ParticipacaoForum vencedora = null;
-        for (ParticipacaoForum participacao : participacoes) {
-            if (vencedora == null) {
-                vencedora = participacao;
-            } else if (participacao.getEngajamento() > vencedora.getEngajamento()) {
-                vencedora = participacao;
-            }
-        }
-
-        if (vencedora != null) {
-            Aluno premiado = vencedora.getAluno();
-            premiado.ganharCurso();
-            return premiado;
-        }
-        return null;
+        return participacoes.stream()
+                .max(POR_ENGAJAMENTO)
+                .map(this::premiar)
+                .orElse(null);
     }
 
     public List<ParticipacaoForum> getParticipacoes() {
-        return Collections.unmodifiableList(participacoes);
+        return List.copyOf(participacoes);
+    }
+
+    private Aluno premiar(ParticipacaoForum vencedora) {
+        Aluno premiado = vencedora.getAluno();
+        premiado.ganharCurso();
+        return premiado;
     }
 }
